[Go-Client] Can build multipart/related requestBody

--- a/modules/openapi-generator/src/main/resources/go/api.mustache
+++ b/modules/openapi-generator/src/main/resources/go/api.mustache
@@ -62,9 +62,19 @@ type {{{nickname}}}Opts struct {
 {{/required}}
 {{/allParams}}
 }
-
 {{/hasOptionalParams}}
-func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}}, {{/hasParams}}{{#allParams}}{{#required}}{{paramName}} {{{dataType}}}{{#hasMore}}, {{/hasMore}}{{/required}}{{/allParams}}{{#hasOptionalParams}}localVarOptionals *{{{nickname}}}Opts{{/hasOptionalParams}}) ({{#returnType}}{{{returnType}}}, {{/returnType}}*http.Response, error) {
+
+{{#requestBodyRequired}}
+{{#hasBodyParam}}
+type Multipart{{{nickname}}} struct {
+    {{#bodyParams}}
+    {{captialBaseName}} {{dataType}}
+    {{/bodyParams}}
+}
+{{/hasBodyParam}}
+{{/requestBodyRequired}}
+
+func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}}, {{/hasParams}}{{#allParams}}{{#required}}{{paramName}} {{{dataType}}}{{#hasMore}}, {{/hasMore}}{{/required}}{{/allParams}}{{#hasOptionalParams}}localVarOptionals *{{{nickname}}}Opts{{/hasOptionalParams}}, httpContentType string) ({{#returnType}}{{{returnType}}}, {{/returnType}}*http.Response, error) {
 	var (
 		localVarHttpMethod   = strings.ToUpper("{{httpMethod}}")
 		localVarPostBody     interface{}
@@ -75,15 +85,30 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}
 		localVarReturnValue  {{{returnType}}}
 		{{/returnType}}
 	)
-
-    // contentTypeMap
-    {{#hasFormParams}}
-    contentTypeMap := map[string]string{
-    {{#formParams}}
-        "{{paramName}}": "{{contentType}}",
-    {{/formParams}}
+	
+	// contentTypeMap
+	var contentTypeMap map[string]string 
+    {{#hasBodyParam}}
+    contentTypeMap = map[string]string{
+    {{#bodyParams}}
+        "{{captialBaseName}}": "{{contentType}}",
+    {{/bodyParams}}
     }
-    {{/hasFormParams}}
+    {{/hasBodyParam}}	
+	{{#requestBodyRequired}}
+	// put values into multipartRelated structure
+	var multipart{{{nickname}}} Multipart{{{nickname}}}
+	_ = multipart{{{nickname}}}
+	{{#hasBodyParam}}
+	if httpContentType == "multipart/related" {
+		{{#bodyParams}}
+		{{#required}}
+    	multipart{{{nickname}}}.{{captialBaseName}} = {{baseName}}
+    	{{/required}}
+		{{/bodyParams}}
+	}
+	{{/hasBodyParam}}
+	{{/requestBodyRequired}}
 
 	// create path and map variables
 	localVarPath := a.client.cfg.BasePath + "{{{path}}}"{{#pathParams}}
@@ -172,6 +197,7 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}
 	if localVarHttpHeaderAccept != "" {
 		localVarHeaderParams["Accept"] = localVarHttpHeaderAccept
 	}
+
 {{#hasHeaderParams}}
 {{#headerParams}}
 	{{#required}}
@@ -189,23 +215,23 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}
 {{#isFile}}
 	localVarFormFileName = "{{baseName}}"
 {{#required}}
-	localVarFile := {{paramName}}
+	localVarFile{{baseName}} := {{paramName}}
 {{/required}}
 {{^required}}
-	var localVarFile {{dataType}}
+	var localVarFile{{baseName}} {{dataType}}
 	if localVarOptionals != nil && localVarOptionals.{{vendorExtensions.x-exportParamName}}.IsSet() {
 		localVarFileOk := false
-		localVarFile, localVarFileOk = localVarOptionals.{{vendorExtensions.x-exportParamName}}.Value().({{dataType}})
+		localVarFile{{baseName}}, localVarFileOk = localVarOptionals.{{vendorExtensions.x-exportParamName}}.Value().({{dataType}})
 		if !localVarFileOk {
 				return {{#returnType}}localVarReturnValue, {{/returnType}}nil, reportError("{{paramName}} should be {{dataType}}")
 		}
 	}
 {{/required}}
-	if localVarFile != nil {
-		fbs, _ := ioutil.ReadAll(localVarFile)
+	if localVarFile{{baseName}} != nil {
+		fbs, _ := ioutil.ReadAll(localVarFile{{baseName}})
 		localVarFileBytes = fbs
-		localVarFileName = localVarFile.Name()
-		localVarFile.Close()
+		localVarFileName = localVarFile{{baseName}}.Name()
+		localVarFile{{baseName}}.Close()
 	}
 {{/isFile}}
 {{^isFile}}
@@ -243,6 +269,11 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}
 {{/required}}
 {{/bodyParams}}
 {{/hasBodyParam}}
+{{#requestBodyRequired}}
+	// point to the multipart struct object
+	localVarPostBody = &multipart{{{nickname}}}
+{{/requestBodyRequired}}
+
 {{#authMethods}}
 {{#isApiKey}}
 {{^isKeyInCookie}}
@@ -266,7 +297,7 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx context.Context{{#hasParams}
 {{/isKeyInCookie}}
 {{/isApiKey}}
 {{/authMethods}}
-	r, err := a.client.prepareRequest(ctx, localVarPath, localVarHttpMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, localVarFormFileName, localVarFileName, localVarFileBytes)
+	r, err := a.client.prepareRequest(ctx, localVarPath, localVarHttpMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, localVarFormFileName, localVarFileName, localVarFileBytes, contentTypeMap)
 	if err != nil {
 		return {{#returnType}}localVarReturnValue, {{/returnType}}nil, err
 	}
